add turbo false to links on form submissions and cancel buttons

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -53,9 +53,9 @@
 
   <div class="flex items-center justify-start flex-wrap gap-6">
     <% if form.object.new_record? %>
-      <%= form.submit 'Create run', class: 'btn btn-primary' %>
+      <%= form.submit 'Create run', data: { turbo: false }, class: 'btn btn-primary' %>
     <% else %>
-      <%= form.submit 'Update run', class: 'btn btn-primary' %>
+      <%= form.submit 'Update run', data: { turbo: false }, class: 'btn btn-primary' %>
 
       <%= link_to "Delete run", @run,
                     class: "btn btn-destructive btn-outline mr-auto",
@@ -65,6 +65,6 @@
                     } %>
     <% end %>
 
-    <%= link_to "Cancel", :back, class: "btn btn-white" %>
+    <%= link_to "Cancel", :back, data: { turbo: false }, class: "btn btn-white" %>
   </div>
 <% end %>
