--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,37 +1,58 @@
-<article id="<%= dom_id run %>" class="py-6 prose dark:prose-invert">
-  <p class="font-bold text-lg"><%= pretty_date(run.date).titlecase %></p>
-
-  <table class="text-base my-0 table-auto border-y border-slate-200 dark:border-slate-700">
-    <tr>
-      <th>Distance:</th>
-      <td><span class="text-base"><%= run.distance %> <span class="text-sm text-slate-600 dark:text-slate-400">mi</span></span></td>
-      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
-    </tr>
-
-    <% if run.duration.present? %>
-      <tr>
-        <th>Time:</th>
-        <td><span class="text-base"><%= clock_time_display(run.duration) %></span></td>
-        <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_time_ago(run.duration, { format: :short }) %></span></td>
-      </tr>
-      <tr>
-        <th>Pace:</th>
-        <td><span class="text-base"><%= clock_time_display(run.pace_per_mile) %> <span class="text-sm text-slate-600 dark:text-slate-400">/ mi</span></span></td>
-        <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
-      </tr>
+<div class="py-6">
+  <div class="flex flex-wrap-reverse gap-4 items-center">
+    <% unless current_page?(run_path(run)) %>
+      <%= link_to run.user, class: 'group flex gap-4 items-center mr-auto' do %>
+        <%= image_tag run.user.avatar, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if run.user.avatar.attached? %>
+        <p class="subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
+          <%= run.user.default_name %>
+        </p>
+      <% end %>
     <% end %>
-  </table>
 
-  <% if run.comments.present? && current_page?(run_path(run)) %>
-    <p class="mb-0 font-semibold">Comments</p>
-    <p class="my-0">
-      <%= simple_format run.comments, class: 'my-0' %>
-    </p>
-  <% end %>
-  <div class="flex">
-    <time class="text-slate-600 dark:text-slate-400 text-xs mt-2 pr-3" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted <%= time_ago_in_words(run.created_at) + " ago" %></time>
-    <%- if run.edited? %>
-      <time class="text-slate-600 dark:text-slate-400 text-xs mt-2 pl-3 border-l dark:border-slate-700" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited <%= time_ago_in_words(run.updated_at) + " ago" %></time>
-    <%- end %>
+    <%= render 'runs/long_run_badge' if local_assigns[:team] && run.long_run_for?(team) %>
   </div>
-</article>
+
+  <%= link_to run do %>
+    <article id="<%= dom_id run %>" class="py-6 prose dark:prose-invert">
+      <div class="flex items-center gap-3">
+        <%= inline_svg_tag 'icons/calendar.svg', class: 'size-5' %>
+        <p class="font-bold text-lg"><%= pretty_date(run.date).titlecase %></p>
+      </div>
+
+      <table class="text-base my-0 table-auto border-y border-slate-200 dark:border-slate-700">
+        <tr>
+          <th>Distance:</th>
+          <td><span class="text-base"><%= run.distance %> <span class="text-sm text-slate-600 dark:text-slate-400">mi</span></span></td>
+          <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
+        </tr>
+
+        <% if run.duration.present? %>
+          <tr>
+            <th>Time:</th>
+            <td><span class="text-base"><%= clock_time_display(run.duration) %></span></td>
+            <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_time_ago(run.duration, { format: :short }) %></span></td>
+          </tr>
+          <tr>
+            <th>Pace:</th>
+            <td><span class="text-base"><%= clock_time_display(run.pace_per_mile) %> <span class="text-sm text-slate-600 dark:text-slate-400">/ mi</span></span></td>
+            <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
+          </tr>
+        <% end %>
+      </table>
+
+      <% if run.comments.present? && current_page?(run_path(run)) %>
+        <p class="mb-0 font-semibold">Comments</p>
+        <p class="my-0">
+          <%= simple_format run.comments, class: 'my-0' %>
+        </p>
+      <% end %>
+      <div class="flex items-center mt-2">
+        <%= inline_svg_tag 'icons/clock.svg', class: 'size-4 mr-2' %>
+        <time class="text-slate-600 dark:text-slate-400 text-xs pr-3" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted <%= time_ago_in_words(run.created_at) + " ago" %></time>
+        <%- if run.edited? %>
+          <time class="text-slate-600 dark:text-slate-400 text-xs pl-3 border-l dark:border-slate-700" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited <%= time_ago_in_words(run.updated_at) + " ago" %></time>
+        <%- end %>
+      </div>
+    </article>
+  <% end %>
+</div>
