--- a/app/views/teams/_recent_activity.html.erb
+++ b/app/views/teams/_recent_activity.html.erb
@@ -4,22 +4,7 @@
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
   <% if team.recent_runs.any? %>
     <% team.recent_runs.each do |run| %>
-      <div class="py-6">
-        <div class="flex flex-wrap gap-4 items-center">
-          <%= link_to run.user, class: 'group flex gap-4 items-center mr-auto' do %>
-            <%= image_tag run.user.avatar, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if run.user.avatar.attached? %>
-            <p class="subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
-              <%= run.user.default_name %>
-            </p>
-          <% end %>
-        </div>
-
-        <%= render run %>
-        <div class="flex items-center gap-2">
-          <%= link_to 'View comments', run, class: 'btn btn-white btn-sm' if run.comments? %>
-          <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if run.user == current_user %>
-        </div>
-      </div>
+        <%= render run, team: team %>
     <% end %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
