--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -27,15 +27,7 @@
     </div>
     <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
       <% if @runs.any? %>
-        <% @runs.each do |run| %>
-          <div class="py-3">
-            <%= render run %>
-            <div class="flex items-center gap-2">
-              <%= link_to 'View comments', run, class: 'btn btn-white btn-sm' if run.comments? %>
-              <%= link_to 'Edit run', edit_run_path(run), class: 'btn btn-primary btn-sm' if user == current_user %>
-            </div>
-          </div>
-        <% end %>
+          <%= render @runs %>
       <% else %>
         <div class="flex flex-col gap-6 items-center justify-center py-12">
           <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
