--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -20,19 +20,17 @@
   <% end %>
 </div>
 
-<div>
-  <%= turbo_frame_tag 'runs' do %>
-    <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-      <h1 class="heading"><%= @title %></h1>
-    </div>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% if @runs.any? %>
-          <%= render @runs %>
-      <% else %>
-        <div class="flex flex-col gap-6 items-center justify-center py-12">
-          <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+<%= turbo_frame_tag 'runs' do %>
+  <div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+    <h1 class="heading">Runs <%= @date_range.titlecase %></h1>
+  </div>
+  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+    <% if @runs.any? %>
+        <%= render @runs %>
+    <% else %>
+      <div class="flex flex-col gap-6 items-center justify-center py-12">
+        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No runs found for the selected date range.</p>
+      </div>
+    <% end %>
+  </div>
+<% end %>
