--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -1,7 +1,6 @@
-<div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
-  <div class="flex items-center justify-between">
-    <h1 class="heading">Account</h1>
-  </div>
+<div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+  <h1 class="heading">Account</h1>
+  <p class="text-slate-700 dark:text-slate-400">Edit your account details.</p>
 </div>
 
 <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
