add description to title on teams/_edit_settings partial

--- a/app/views/teams/_edit_settings.html.erb
+++ b/app/views/teams/_edit_settings.html.erb
@@ -1,7 +1,6 @@
-<div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
-  <div class="flex items-center justify-between">
-    <h1 class="heading">Team Settings</h1>
-  </div>
+<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+  <h1 class="heading">Settings</h1>
+  <p class="text-slate-700 dark:text-slate-400">Set preferences for your team to match your needs.</p>
 </div>
 
 <%= form_with model: @team, url: team_settings_path(@team), local: true, data: { controller: 'restore-defaults team-gender-fields' } do |form| %>
