--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mb-6">
+<div class="mt-10 pb-6">
   <h1 class="heading">Find Teams</h1>
 </div>
 
