--- a/app/views/teams/_owned_teams.html.erb
+++ b/app/views/teams/_owned_teams.html.erb
@@ -1,9 +1,10 @@
-<div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
   <h1 class="heading">My Teams</h1>
   <% if owned_teams.any? %>
     <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
   <% end %>
 </div>
+
 <% if owned_teams.any? %>
   <%= render 'team_list', teams: owned_teams %>
 <% else %>
