--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center mt-10 mb-6">
+<div class="mt-10 pb-6">
   <h1 class="heading">Team Members</h1>
 </div>
 
