--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -1,7 +1,9 @@
-<div>
-  <div class="flex flex-wrap gap-6 items-center justify-between mt-10 mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
-    <h1 id="runs_title" class="heading">Filter Runs By Date</h1>
+<div class="mb-24">
+  <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+    <h1 id="runs_title" class="heading">Filter Runs</h1>
+    <p class="text-slate-700 dark:text-slate-400">Filter <%= user == current_user ? 'your runs' : 'runs for this user' %> by date.</p>
   </div>
+
   <%= form_with url: user_path(user), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'runs', controller: 'custom-date-range form-validation' } do %>
     <div class="form-group">
       <%= label_tag :run_date_range, 'Select date range', class: 'form-label' %>
