--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,11 +1,14 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
-  <h1 class="heading">Runs Today</h1>
+<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
+  <div class="space-y-2">
+    <h1 class="heading">Runs Today</h1>
+    <p class="text-slate-700 dark:text-slate-400">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
+  </div>
+
   <% if user == current_user && user.runs_today.any? %>
-    <div class="flex items-center justify-end">
-      <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
-    </div>
+    <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
   <% end %>
 </div>
+
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
   <% if user.runs_today.any? %>
     <% user.runs_today.each do |run| %>
