--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -1,19 +1,19 @@
-<div class="pb-3 mt-10">
-  <div class="mt-10 pb-6 mb-6 border-b border-slate-200 dark:border-slate-700">
-    <h1 class="heading">User Info</h1>
+<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+  <h1 class="heading">User Info</h1>
+  <p class="text-slate-700 dark:text-slate-400">Information and statistics about <%= user == current_user ? 'you' : 'this user' %>.</p>
+</div>
+
+<div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
+  <div class='flex flex-col items-center justify-center text-center'>
+    <p class='font-semibold text-2xl'>
+      <%= user.total_miles %>
+    </p>
+    <p class='text-slate-700 dark:text-slate-400'>miles ran</p>
   </div>
-  <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
-    <div class='flex flex-col items-center justify-center text-center'>
-      <p class='font-semibold text-2xl'>
-        <%= user.total_miles %>
-      </p>
-      <p class='text-slate-700 dark:text-slate-400'>miles ran</p>
-    </div>
-    <div class='flex flex-col items-center justify-center text-center'>
-      <p class='font-semibold text-2xl'>
-        <%= precise_time_ago(user.total_duration, format: :short) %>
-      </p>
-      <p class='text-slate-700 dark:text-slate-400'>spent running</p>
-    </div>
+  <div class='flex flex-col items-center justify-center text-center'>
+    <p class='font-semibold text-2xl'>
+      <%= precise_time_ago(user.total_duration, format: :short) %>
+    </p>
+    <p class='text-slate-700 dark:text-slate-400'>spent running</p>
   </div>
 </div>
