remove unnecessary spacing from user runs tab container

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,7 +72,7 @@
     <div class="mb-24">
       <%= render 'runs_today', user: @user %>
     </div>
-    <div class="mb-24 space-y-24">
+    <div class="mb-24">
       <%= render 'runs_filter', user: @user %>
     </div>
   </div>
