--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -1,19 +1,58 @@
-<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
-  <h1 class="heading">User Info</h1>
-  <p class="text-slate-700 dark:text-slate-400">Information and statistics about <%= user == current_user ? 'you' : 'this user' %>.</p>
+<div class="mb-24">
+  <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+    <h1 class="heading">User Info</h1>
+    <p class="text-slate-700 dark:text-slate-400">Information and statistics about <%= user == current_user ? 'you' : 'this user' %>.</p>
+  </div>
+
+  <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
+    <div class='flex flex-col items-center justify-center text-center'>
+      <p class='font-semibold text-2xl'>
+        <%= user.total_miles %>
+      </p>
+      <p class='text-slate-700 dark:text-slate-400'>miles ran</p>
+    </div>
+    <div class='flex flex-col items-center justify-center text-center'>
+      <p class='font-semibold text-2xl'>
+        <%= precise_time_ago(user.total_duration, format: :short) %>
+      </p>
+      <p class='text-slate-700 dark:text-slate-400'>spent running</p>
+    </div>
+  </div>
 </div>
 
-<div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
-  <div class='flex flex-col items-center justify-center text-center'>
-    <p class='font-semibold text-2xl'>
-      <%= user.total_miles %>
-    </p>
-    <p class='text-slate-700 dark:text-slate-400'>miles ran</p>
+<% if user.settings(:privacy).email_visible || (user.settings(:privacy).phone_visible && user.phone_number.present?) %>
+  <div class="mb-24">
+    <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+      <h1 class="heading">Contact Information</h1>
+      <p class="text-slate-700 dark:text-slate-400"><%= user == current_user ? 'Your contact information' : 'Conact information for this user' %>.</p>
+    </div>
+
+    <div class="block sm:flex space-y-4 sm:items-center sm:justify-around mb-8">
+      <% if user.settings(:privacy).email_visible %>
+        <div class="space-y-1">
+          <p><%= user.email %></p>
+          <div class="flex items-center justify-center gap-3">
+            <%= mail_to user.email, class: 'btn btn-sm btn-white' do %>
+              <%= inline_svg_tag 'icons/envelope.svg', class: 'size-4' %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+      <% if user.settings(:privacy).phone_visible && user.phone_number.present? %>
+        <div class="space-y-1">
+          <p><%= number_to_phone(user.phone_number, area_code: true) %></p>
+          <div class="flex items-center justify-center gap-3">
+            <%= sms_to user.phone_number, class: 'btn btn-sm btn-white' do %>
+              <%= inline_svg_tag 'icons/message-bubble.svg', class: 'size-4' %>
+            <% end %>
+
+            <%= phone_to user.phone_number, class: 'btn btn-sm btn-white' do %>
+              <%= inline_svg_tag 'icons/phone.svg', class: 'size-4' %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
-  <div class='flex flex-col items-center justify-center text-center'>
-    <p class='font-semibold text-2xl'>
-      <%= precise_time_ago(user.total_duration, format: :short) %>
-    </p>
-    <p class='text-slate-700 dark:text-slate-400'>spent running</p>
-  </div>
-</div>
+<% end %>
