add coach label to coach on _member_list partial

--- a/app/views/teams/_member_list.html.erb
+++ b/app/views/teams/_member_list.html.erb
@@ -5,6 +5,9 @@
         <%= image_tag member.avatar, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none' if member.avatar.attached? %>
 
         <div>
+          <% if member.owns?(@team) %>
+            <p class="text-slate-800 dark:text-slate-100 text-sm">Coach</p>
+          <% end %>
           <h2 class='subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300'><%= member.default_name %></h2>
           <% if member.display_name.present? %>
             <p class="help-text"><%= member.username %></p>
