--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     </script>
   </head>
 
-  <body class='font-normal leading-normal text-slate-800 relative selection:bg-indigo-500/40 bg-white dark:bg-slate-900 dark:text-slate-100 antialiased'>
+  <body class='text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 bg-white dark:bg-slate-900 font-normal leading-normal antialiased relative'>
     <%= render "shared/flash" if user_signed_in? ? current_user.settings(:notifications).in_app : true %>
     <div class="w-full flex h-svh max-h-svh">
       <%= render "shared/sidebar" if user_signed_in? %>
