remove search buttons from search forms

--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -3,13 +3,12 @@
 </div>
 
 <div class="border-b border-slate-200 dark:border-slate-700">
-  <%= form_with url: team_path(@team), method: :get, html: { novalidate: true }, data: { turbo_frame: 'teamMembers', turbo_action: 'advance', controller: 'search-form' } do |form| %>
+  <%= form_with url: @team, method: :get, html: { novalidate: true }, data: { turbo_frame: 'teamMembers', turbo_action: 'advance', controller: 'search-form' } do |form| %>
     <%= form.label :query, 'Find a team member by name:', class: 'sr-only' %>
 
-    <div class="form-group flex items-center gap-6 relative">
-      <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 text-slate-500' %>
+    <div class="form-group relative">
+      <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
       <%= form.search_field :query, placeholder: 'Team member name', data: { action: 'input->search-form#search' }, class: 'form-input pl-10' %>
-      <%= form.submit 'Search', class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
