--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -25,7 +25,6 @@
           <td><span class="text-base"><%= run.distance %> <span class="text-sm text-slate-600 dark:text-slate-400">mi</span></span></td>
           <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
         </tr>
-
         <% if run.duration.present? %>
           <tr>
             <th>Time:</th>
@@ -40,12 +39,18 @@
         <% end %>
       </table>
 
-      <% if run.comments.present? && current_page?(run_path(run)) %>
-        <p class="mb-0 font-semibold">Comments</p>
-        <p class="my-0">
-          <%= simple_format run.comments, class: 'my-0' %>
-        </p>
+      <% if run.comments.present? %>
+        <% if current_page?(run_path(run)) %>
+          <p class="font-semibold mb-0">Comments</p>
+          <%= simple_format run.comments, class: 'mt-0 text-sm' %>
+        <% else %>
+          <div class="flex items-center gap-2 my-3">
+            <%= inline_svg_tag 'icons/comment.svg', class: 'size-5' %>
+            <p class="my-0 text-sm">Comments</p>
+          </div>
+        <% end %>
       <% end %>
+
       <div class="flex items-center mt-2">
         <%= inline_svg_tag 'icons/clock.svg', class: 'size-4 mr-2' %>
         <time class="text-slate-600 dark:text-slate-400 text-xs pr-3" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted <%= time_ago_in_words(run.created_at) + " ago" %></time>
