--- a/app/views/teams/_members.html.erb
+++ b/app/views/teams/_members.html.erb
@@ -16,6 +16,12 @@
 
 <%= turbo_frame_tag 'teamMembers' do %>
   <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-    <%= render 'member_list', members: members %>
+    <% if members.any? %>
+      <%= render 'member_list', members: members %>
+    <% else %>
+      <div class="flex flex-col gap-6 items-center justify-center py-12">
+        <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No team members found.</p>
+      </div>
+    <% end %>
   </div>
 <% end %>
