--- a/app/views/teams/_member.html.erb
+++ b/app/views/teams/_member.html.erb
@@ -30,7 +30,7 @@
   <% if member.any_teams_in_common?(user: current_user, excluded_teams: [@team] ) %>
     <p class="help-text mt-1">
       <span>Also a member of:</span>
-      <%= member.teams_in_common(current_user).reject { |team| team == @team }.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }.join(', ').html_safe %>
+      <%= list(items: member.teams_in_common(current_user).reject { |team| team == @team }.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %>
     </p>
   <% end %>
 </div>
