--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,11 +11,11 @@
     </button>
   </div>
 
-  <div id="settingsTab" data-tabs-target="tab">
-    <%= render 'users/edit_settings' %>
+  <div id="accountTab" data-tabs-target="tab">
+    <%= render 'edit_user' %>
   </div>
 
-  <div id="accountTab" data-tabs-target="tab" class="hidden">
-    <%= render 'edit_user' %>
+  <div id="settingsTab" data-tabs-target="tab" class="hidden">
+    <%= render 'users/edit_settings' %>
   </div>
 </div>
