center run distance quick buttons

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -12,22 +12,22 @@
       <span class="error-message hidden my-1" data-form-validation-target="distanceError">Distance must be a positive number</span>
     </div>
 
-    <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-0.1" class="btn btn-sm btn-white">-</button>
-      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="0.1" class="btn btn-sm btn-white">0.1 miles</button>
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="0.1" class="btn btn-sm btn-white">+</button>
+    <div class="form-group flex flex-wrap items-center justify-center gap-3 -mt-2 select-none">
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-0.1" class="btn btn-white min-w-12">-</button>
+      <p class="w-1/4 sm:w-1/5 md:w-1/6 min-w-max text-center">0.1 miles</p>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="0.1" class="btn btn-white min-w-12">+</button>
     </div>
 
-    <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-1" class="btn btn-sm btn-white">-</button>
-      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="1" class="btn btn-sm btn-white">1 mile</button>
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="1" class="btn btn-sm btn-white">+</button>
+    <div class="form-group flex flex-wrap items-center justify-center gap-3 -mt-2 select-none">
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-1" class="btn btn-white min-w-12">-</button>
+      <p class="w-1/4 sm:w-1/5 md:w-1/6 min-w-max text-center">1 mile</p>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="1" class="btn btn-white min-w-12">+</button>
     </div>
 
-    <div class="form-group flex flex-wrap items-center gap-3 -mt-2 select-none">
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-5" class="btn btn-sm btn-white">-</button>
-      <button type="button" data-action="click->distance-shortcuts#setDistance click->form-validation#validateDistance" data-set-distance-value="5" class="btn btn-sm btn-white">5 miles</button>
-      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="5" class="btn btn-sm btn-white">+</button>
+    <div class="form-group flex flex-wrap items-center justify-center gap-3 -mt-2 select-none">
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="-5" class="btn btn-white min-w-12">-</button>
+      <p class="w-1/4 sm:w-1/5 md:w-1/6 min-w-max text-center">5 miles</p>
+      <button type="button" data-action="click->distance-shortcuts#updateDistance click->form-validation#validateDistance" data-update-distance-value="5" class="btn btn-white min-w-12">+</button>
     </div>
   </div>
 
