--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag(:p, 'Team', class: 'text-slate-800 dark:text-slate-100 text-sm') if current_page?(search_path) %>
+
 <div class="flex items-center flex-wrap gap-4">
   <% if team.photo.attached? %>
     <%= link_to team, data: { turbo: false } do %>
