--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -14,6 +14,11 @@
       <span>Teams</span>
     <% end %>
 
+    <%= link_to search_path, aria: { current: current_page?(search_path) ? 'page' : nil }, class: "sidebar-link #{current_page?(search_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
+      <%= inline_svg_tag 'icons/search.svg', class: 'size-6' %>
+      <span>Search</span>
+    <% end %>
+
     <%= link_to edit_user_registration_path, aria: { current: current_page?(edit_user_registration_path) ? 'page' : nil }, class: "sidebar-link #{current_page?(edit_user_registration_path) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" do %>
       <%= inline_svg_tag 'icons/settings.svg', class: 'size-6' %>
       <span>Settings</span>
