--- a/app/views/search/index.turbo_stream.erb
+++ b/app/views/search/index.turbo_stream.erb
@@ -1,7 +1,7 @@
 <%= turbo_stream.replace 'searchResults' do %>
   <%= turbo_frame_tag 'searchResults' do %>
     <% if @teams.any? || @users.any? %>
-      <%= render 'teams/team_list', teams: @teams if @teams.any? %>
+      <%= render 'teams/team_list', teams: @teams, show_members: true if @teams.any? %>
       <%= render 'users/user_list', users: @users if @users.any? %>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
