--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -16,7 +16,7 @@
 
 <%= turbo_frame_tag 'otherTeams' do %>
   <% if other_teams.any? %>
-    <%= render 'team_list', teams: other_teams %>
+    <%= render 'team_list', teams: other_teams, show_members: true %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No teams found.</p>
