--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -20,3 +20,10 @@
   </div>
   <%= render 'teams/team_buttons', team: team %>
 </div>
+
+<% if show_members && team.any_members_in_common?(current_user) %>
+  <p class="help-text mt-1">
+    <span>Members:</span>
+    <%= list(items: team.members_in_common(current_user).map { |user| link_to(user.default_name, user, data: { turbo: false }, class: 'btn-link') }).html_safe %>
+  </p>
+<% end %>
