--- a/app/views/teams/_team_list.html.erb
+++ b/app/views/teams/_team_list.html.erb
@@ -1,7 +1,9 @@
+<% show_members = defined?(show_members) ? show_members : false %>
+
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
   <% teams.each do |team| %>
     <div class="py-6">
-      <%= render team %>
+      <%= render team, show_members: show_members %>
     </div>
   <% end %>
 </div>
