--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -11,9 +11,16 @@
   <% end %>
 </div>
 
-<% if user.any_teams_in_common?(current_user) %>
+<% if user.any_owned_teams_in_common?(current_user) %>
+  <p class="help-text mt-1">
+    <span>Coach of:</span>
+    <%= list(items: user.owned_teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %>
+  </p>
+<% end %>
+
+<% if user.any_membered_teams_in_common?(current_user) %>
   <p class="help-text mt-1">
     <span>Member of:</span>
-    <%= list(items: user.teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %>
+    <%= list(items: user.membered_teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %>
   </p>
 <% end %>
