--- a/app/views/search/index.turbo_stream.erb
+++ b/app/views/search/index.turbo_stream.erb
@@ -2,7 +2,9 @@
   <%= turbo_frame_tag 'searchResults' do %>
     <% if @teams.any? || @users.any? %>
       <%= render 'teams/team_list', teams: @teams, show_members: true if @teams.any? %>
-      <%= render 'users/user_list', users: @users if @users.any? %>
+      <div class="border-t dark:border-slate-700">
+        <%= render 'users/user_list', users: @users if @users.any? %>
+      </div>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
         <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'prose dark:prose-invert text-slate-700 dark:text-slate-400 text-center') %>
