--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -9,7 +9,7 @@
 
   <div class="mr-auto">
     <p class="subheading mb-0.5"><%= link_to team.name, team, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
-    <p class="help-text"><%= link_to team.owner.default_name, team.owner, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
+    <p class="help-text">Coach: <%= link_to team.owner.default_name, team.owner, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
     <% if team.season_dates? %>
       <% if team.season_start_date.after?(Date.today) %>
         <p class="text-slate-700 dark:text-slate-400 text-sm mt-1">Season starts <%= pretty_date(team.season_start_date) %></p>
@@ -23,7 +23,7 @@
 
 <% if show_members && team.any_members_in_common?(current_user) %>
   <p class="help-text mt-1">
-    <span>Members:</span>
+    <span>Members you know:</span>
     <%= list(items: team.members_in_common(current_user).map { |user| link_to(user.default_name, user, data: { turbo: false }, class: 'btn-link') }).html_safe %>
   </p>
 <% end %>
