--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -1,4 +1,4 @@
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10 border-t dark:border-slate-700">
+<div class="divide-y dark:divide-slate-700 dark:text-slate-700">
   <% users.each do |user| %>
     <div class="py-6">
       <%= render user %>
