change team settings header from 'settings' to 'team settings'

--- a/app/views/teams/_edit_settings.html.erb
+++ b/app/views/teams/_edit_settings.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
-  <h1 class="heading">Settings</h1>
+  <h1 class="heading">Team Settings</h1>
   <p class="text-slate-700 dark:text-slate-400">Set preferences for your team to match your needs.</p>
 </div>
 
