fix: tab flicker on page load

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -11,11 +11,11 @@
     </button>
   </div>
 
-  <div id="settingsTab" data-tabs-target="tab">
-    <%= render 'edit_settings' %>
+  <div id="editTab" data-tabs-target="tab">
+    <%= render 'edit_team' %>
   </div>
 
-  <div id="editTab" data-tabs-target="tab" class="hidden">
-    <%= render 'edit_team' %>
+  <div id="settingsTab" data-tabs-target="tab" class="hidden">
+    <%= render 'edit_settings' %>
   </div>
 </div>
